# qrcode_rust

./: .gitignore  README.md  checksum-Elixir.QRCodeRust.exs  mix.exs
.github/workflows/: release.yml
lib/: qrcode_rust.ex
native/qrcoderust_nif/: Cargo.toml  README.md
native/qrcoderust_nif/.cargo/: config.toml
native/qrcoderust_nif/src/: lib.rs  qr.rs
test/: qrcode_rust_test.exs
