[package]
name = "qrcoderust_nif"
version = "0.2.0"
authors = ["Håvard Lindset"]
edition = "2018"
rust-version = "1.56.1"

[lib]
name = "qrcoderust_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.27.0"
qrcode = { version = "0.12", default-features = false }

[dev-dependencies]
image = "0.23"
resvg = "0.19.0"
usvg = "0.19.0"
tiny-skia = "0.6.1"
quircs = "0.10.0"

[profile.test]
opt-level = 3
