[package]
name = "qrcoderust_nif"
version = "0.4.0"
authors = ["Håvard Lindset"]
edition = "2024"
rust-version = "1.85.1"

[lib]
name = "qrcoderust_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = { version = "0.36.1", default-features = false, features = [
    "derive",
] }
qrcode = { version = "0.12", default-features = false }

[features]
default = ["nif_version_2_15"]
nif_version_2_15 = ["rustler/nif_version_2_15"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
nif_version_2_17 = ["rustler/nif_version_2_17"]

[dev-dependencies]
image = "0.23"
resvg = "0.19.0"
usvg = "0.19.0"
tiny-skia = "0.6.1"
quircs = "0.10.0"

[profile.test]
opt-level = 3
